--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,7 @@
   <button mat-button [matMenuTriggerFor]="masterdata">Masterdata</button>
   <mat-menu #masterdata="matMenu">
     <button mat-menu-item routerLink="/entities/plantspecies">Plantspecies</button>
+    <button mat-menu-item routerLink="/entities/plantlocations">Locations</button>
     <button mat-menu-item routerLink="/entities/seedpackages">Seedpackages</button>
     <button mat-menu-item routerLink="/entities/plants">Plants</button>
     <button mat-menu-item routerLink="/entities/producepickevents">Produce</button>
