--- a/src/app/entities/plantspecies/list/plantspecies-list.component.html
+++ b/src/app/entities/plantspecies/list/plantspecies-list.component.html
@@ -27,16 +27,26 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
             <td mat-cell *matCellDef="let item">{{item.name}}</td>
           </ng-container>
-          <!-- Description column -->
-          <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description</th>
-            <td mat-cell *matCellDef="let item"> {{item.description}} </td>
+          <!-- Type column -->
+          <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Type</th>
+            <td mat-cell *matCellDef="let item">
+              <a *ngIf="item.parentId && getItemById(item.parentId)?.type"
+                routerLink="/entities/plantspeciestypes/{{getItemById(item.parentId)?.type?.id}}">{{getItemById(item.parentId)?.type?.name}}</a>
+              <a *ngIf="!item.parentId && item.type"
+                routerLink="/entities/plantspeciestypes/{{item.type.id}}">{{item.type?.name}}</a>
+            </td>
           </ng-container>
           <!-- Parent column -->
           <ng-container matColumnDef="parent">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Parent</th>
             <td mat-cell *matCellDef="let item"><a
               routerLink="/entities/plantspecies/{{item.parentId}}">{{getItemById(item.parentId)?.name}}</a></td>
+          </ng-container>
+          <!-- Description column -->
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description</th>
+            <td mat-cell *matCellDef="let item"> {{item.description}} </td>
           </ng-container>
           <!-- Maximum height column -->
           <ng-container matColumnDef="maximumHeight">
