--- a/src/app/entities/plants/list/plants-list.component.html
+++ b/src/app/entities/plants/list/plants-list.component.html
@@ -30,7 +30,14 @@
           <!-- Plant species column -->
           <ng-container matColumnDef="plantSpecies">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Plant species</th>
-            <td mat-cell *matCellDef="let item">{{item.plantSpecies?.name}}</td>
+            <td mat-cell *matCellDef="let item">
+              <a routerLink="/entities/plantspecies/{{item.plantSpecies?.id}}">{{item.plantSpecies?.name}}</a></td>
+          </ng-container>
+          <!-- Plant location column -->
+          <ng-container matColumnDef="plantLocation">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Plant location</th>
+            <td mat-cell *matCellDef="let item">
+              <a routerLink="/entities/plantlocations/{{item.location?.id}}">{{item.location?.name}}</a></td>
           </ng-container>
           <ng-container matColumnDef="source">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Source</th>
