--- a/src/app/entities/produce-pick-event/list/produce-pick-event-list.component.html
+++ b/src/app/entities/produce-pick-event/list/produce-pick-event-list.component.html
@@ -35,8 +35,9 @@
           <!-- plant column -->
           <ng-container matColumnDef="plant">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Plant</th>
-            <td mat-cell *matCellDef="let item"><a
-              routerLink="/entities/plants/{{item.plant.id}}">Plant with id {{item.plant.id}}</a></td>
+            <td mat-cell *matCellDef="let item">
+              <a routerLink="/entities/plants/{{item.plant.id}}">{{item.plant.plantSpecies.name}} in {{item.plant.location?.name}}</a>
+            </td>
           </ng-container>
           <!-- count column -->
           <ng-container matColumnDef="count">
