--- a/src/app/entities/seed-package/detail/seed-package-detail.component.html
+++ b/src/app/entities/seed-package/detail/seed-package-detail.component.html
@@ -1,8 +1,12 @@
 <div class="row">
   <div class="col-xs-offset-1 col-xs-10">
     <div class="box-row">
-      <h1>Seedpackage</h1>
-      <a routerLink="/entities/seedpackages">To list</a>
+      <mat-toolbar>
+        <span>Seedpackage</span>
+        <span class="toolbar-spacer"></span>
+        <button mat-icon-button class="btn" routerLink="/entities/seedpackages"><mat-icon>arrow_back</mat-icon></button>
+        <button mat-icon-button class="btn btn-primary" (click)="save()"><mat-icon>save</mat-icon></button>
+      </mat-toolbar>
       <div *ngIf="item" class="pm-detail-form-container">
         <mat-form-field appearance="fill">
           <mat-label>Id</mat-label>
@@ -18,6 +22,10 @@
           <mat-label>Description</mat-label>
           <input matInput [(ngModel)]="item.description">
         </mat-form-field>
+        <div>
+          <mat-label>% Filled</mat-label>
+          <mat-slider [(ngModel)]="item.percentFull" thumbLabel [displayWith]="formatSliderLabel" min="0" max="100" step="5" ></mat-slider>
+        </div>
         <mat-form-field appearance="fill">
           <mat-label>Plant species</mat-label>
           <mat-select [(ngModel)]="item.plantSpecies" [compareWith]="compareById">
@@ -50,7 +58,6 @@
           </mat-form-field>
         </div>
 
-        <button mat-button class="btn btn-primary" (click)="save()">Save</button>
       </div>
     </div>
   </div>
