--- a/src/app/entities/seed-package/list/seed-package-list.component.html
+++ b/src/app/entities/seed-package/list/seed-package-list.component.html
@@ -1,13 +1,17 @@
 <div class="row">
   <div class="col-xs-offset-1 col-xs-10">
     <div class="box-row">
-      <h1>Seedpackages</h1>
-      <a mat-button routerLink="/entities/seedpackages/new">Add</a>
-
-      <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Filter table" #input>
-      </mat-form-field>
+      <mat-toolbar>
+        <span>Seedpackages</span>
+        <span class="toolbar-spacer"></span>
+        <button mat-icon-button routerLink="/entities/seedpackages/new">
+          <mat-icon>post_add</mat-icon>
+        </button>
+        <mat-form-field>
+          <mat-label>Filter</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Filter table" #input>
+        </mat-form-field>
+      </mat-toolbar>
 
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
