--- a/src/app/entities/plantspecies-type/list/plantspecies-type-list.component.html
+++ b/src/app/entities/plantspecies-type/list/plantspecies-type-list.component.html
@@ -14,7 +14,7 @@
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="pm-action-cell"> Actions</th>
             <td mat-cell *matCellDef="let item" class="pm-action-cell">
-              <button mat-icon-button routerLink="/entities/plantspecies/{{item.id}}" aria-label="Edit">
+              <button mat-icon-button routerLink="/entities/plantspeciestypes/{{item.id}}" aria-label="Edit">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-icon-button (click)="delete(item)" aria-label="Delete">
