show seedpackages by type

--- a/src/app/plant-block/plant-block.component.html
+++ b/src/app/plant-block/plant-block.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-toolbar>
-    <span>Plants</span>
+    <h1>Plants</h1>
     <span class="toolbar-spacer"></span>
     <button mat-icon-button routerLink="/entities/plants/new">
       <mat-icon>post_add</mat-icon>
