--- a/src/app/entities/plants/detail/plants-detail.component.html
+++ b/src/app/entities/plants/detail/plants-detail.component.html
@@ -1,8 +1,13 @@
 <div class="row">
   <div class="col-xs-offset-1 col-xs-10">
     <div class="box-row">
-      <h1>Plant</h1>
-      <a routerLink="/entities/plants">To list</a>
+      <mat-toolbar>
+        <h1>Plant</h1>
+        <span class="toolbar-spacer"></span>
+        <button mat-icon-button class="btn" routerLink="/entities/plants"><mat-icon>arrow_back</mat-icon></button>
+        <button mat-icon-button class="btn btn-primary" (click)="save()"><mat-icon>save</mat-icon></button>
+      </mat-toolbar>
+
       <div *ngIf="item" class="pm-detail-form-container">
         <div class="col-xs-6">
           <mat-form-field appearance="fill">
@@ -100,7 +105,6 @@
           </div>
         </div>
 
-        <button mat-button class="btn btn-primary" (click)="save()">Save</button>
       </div>
     </div>
   </div>
