--- a/src/app/entities/seed-package/detail/seed-package-detail.component.html
+++ b/src/app/entities/seed-package/detail/seed-package-detail.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-offset-1 col-xs-10">
     <div class="box-row">
       <mat-toolbar>
-        <span>Seedpackage</span>
+        <h1>Seedpackage</h1>
         <span class="toolbar-spacer"></span>
         <button mat-icon-button class="btn" routerLink="/entities/seedpackages"><mat-icon>arrow_back</mat-icon></button>
         <button mat-icon-button class="btn btn-primary" (click)="save()"><mat-icon>save</mat-icon></button>
