--- a/src/app/entities/plant-location/list/plant-location-list.component.html
+++ b/src/app/entities/plant-location/list/plant-location-list.component.html
@@ -1,13 +1,17 @@
 <div class="row">
   <div class="col-xs-offset-1 col-xs-10">
     <div class="box-row">
-      <h1>Locations</h1>
-      <button mat-raised-button color="primary" routerLink="/entities/plantlocations/new">Add</button>
-
-      <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Filter table" #input>
-      </mat-form-field>
+      <mat-toolbar>
+        <h1>Locations</h1>
+        <span class="toolbar-spacer"></span>
+        <button mat-icon-button routerLink="/entities/plantlocations/new">
+          <mat-icon>post_add</mat-icon>
+        </button>
+        <mat-form-field>
+          <mat-label>Filter</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Filter table" #input>
+        </mat-form-field>
+      </mat-toolbar>
 
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort aria-label="table with plantlocations">
