--- a/src/app/entities/plantspecies-type/detail/plantspecies-type-detail.component.html
+++ b/src/app/entities/plantspecies-type/detail/plantspecies-type-detail.component.html
@@ -1,8 +1,13 @@
 <div class="row">
   <div class="col-xs-offset-1 col-xs-10">
     <div class="box-row">
-      <h1>Plant specy type</h1>
-      <a routerLink="/entities/plantspeciestypes">To list</a>
+      <mat-toolbar>
+        <h1>Plant specy type</h1>
+        <span class="toolbar-spacer"></span>
+        <button mat-icon-button class="btn" routerLink="/entities/plantspeciestypes"><mat-icon>arrow_back</mat-icon></button>
+        <button mat-icon-button class="btn btn-primary" (click)="save()"><mat-icon>save</mat-icon></button>
+      </mat-toolbar>
+
       <div *ngIf="item" class="pm-detail-form-container">
         <mat-form-field appearance="fill">
           <mat-label>Id</mat-label>
@@ -13,7 +18,6 @@
           <input matInput [(ngModel)]="item.name">
         </mat-form-field>
 
-        <button mat-button class="btn btn-primary" (click)="save()">Save</button>
       </div>
     </div>
   </div>
