--- a/src/app/entities/seed-package/list/seed-package-list.component.html
+++ b/src/app/entities/seed-package/list/seed-package-list.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-offset-1 col-xs-10">
     <div class="box-row">
       <mat-toolbar>
-        <span>Seedpackages</span>
+        <h1>Seedpackages</h1>
         <span class="toolbar-spacer"></span>
         <button mat-icon-button routerLink="/entities/seedpackages/new">
           <mat-icon>post_add</mat-icon>
