--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,8 @@
-<div class="row">
-  <div class="col-xs-offset-1 col-xs-10">
-    <div class="box-row">
+<div class="row m-1">
+  <div class="col-lg-6">
       <app-seed-package-block></app-seed-package-block>
-    </div>
   </div>
-</div>
-<br/>
-<div class="row">
-  <div class="col-xs-offset-1 col-xs-10">
-    <div class="box-row">
+  <div class="col-lg-6">
       <app-plant-block></app-plant-block>
-    </div>
   </div>
 </div>
