--- a/src/app/entities/plants/detail/plants-detail.component.html
+++ b/src/app/entities/plants/detail/plants-detail.component.html
@@ -1,15 +1,24 @@
-<div class="row">
-  <div class="col-xs-offset-1 col-xs-10">
-    <div class="box-row">
-      <mat-toolbar>
+<div class="row justify-content-md-center">
+  <div class="col-lg-8 g-0">
+    <div >
+      <mat-toolbar >
         <h1>Plant</h1>
         <span class="toolbar-spacer"></span>
-        <button mat-icon-button class="btn" routerLink="/entities/plants"><mat-icon>arrow_back</mat-icon></button>
-        <button mat-icon-button class="btn btn-primary" (click)="save()"><mat-icon>save</mat-icon></button>
+        <button mat-icon-button class="btn" title="back to list" routerLink="/entities/plants">
+          <mat-icon>arrow_back</mat-icon>
+        </button>
+        <button *ngIf="item" mat-icon-button class="btn" title="Pick produce from this plant"
+                [routerLink]="['/entities/producepickevents/new',{plant:item.id}]">
+          <mat-icon>add_task</mat-icon>
+        </button>
+        <button mat-icon-button class="btn btn-primary" title="save" (click)="save()">
+          <mat-icon>save</mat-icon>
+        </button>
       </mat-toolbar>
-
-      <div *ngIf="item" class="pm-detail-form-container">
-        <div class="col-xs-6">
+    </div>
+    <div class="row">
+      <div *ngIf="item" class="col-lg-8 pm-detail-form-container">
+        <div>
           <mat-form-field appearance="fill">
             <mat-label>Id</mat-label>
             <input matInput disabled [(ngModel)]="item.id">
@@ -30,9 +39,9 @@
           </mat-form-field>
         </div>
 
-        <div class="box">
-          <mat-checkbox class="example-margin" [(ngModel)]="hasBuyEvent" (change)="onBuyChangeEvent($event)">Purchased</mat-checkbox>
-          <div *ngIf="item.buyEvent" class="col-xs-6">
+        <div>
+          <mat-checkbox [(ngModel)]="hasBuyEvent" (change)="onBuyChangeEvent($event)">Purchased</mat-checkbox>
+          <div *ngIf="item.buyEvent">
             <mat-form-field appearance="fill">
               <mat-label>Buy date</mat-label>
               <input matInput [matDatepicker]="buyDateDatepicker" [(ngModel)]="item.buyEvent.date" required>
@@ -51,10 +60,9 @@
             </mat-form-field>
           </div>
         </div>
-        <div class="box">
-          <mat-checkbox class="example-margin" [(ngModel)]="hasSeedStartEvent" (change)="onSeedStartChangeEvent($event)">Started from seed
-          </mat-checkbox>
-          <div *ngIf="item.seedStartEvent" class="col-xs-6">
+        <div>
+          <mat-checkbox [(ngModel)]="hasSeedStartEvent" (change)="onSeedStartChangeEvent($event)">Started from seed</mat-checkbox>
+          <div *ngIf="item.seedStartEvent">
             <mat-form-field appearance="fill">
               <mat-label>Seed package</mat-label>
               <mat-select [(ngModel)]="item.seedStartEvent.seedPackage" [compareWith]="compareById"
@@ -75,10 +83,10 @@
             </mat-form-field>
           </div>
         </div>
-        <div class="box">
-          <mat-checkbox class="example-margin" [(ngModel)]="hasPlantDiedEvent" (change)="onPlantDiedChangeEvent($event)">Died</mat-checkbox>
-          <div *ngIf="item.plantDiedEvent" class="row">
-            <div class="col-xs">
+        <div>
+          <mat-checkbox [(ngModel)]="hasPlantDiedEvent" (change)="onPlantDiedChangeEvent($event)">Died</mat-checkbox>
+          <div *ngIf="item.plantDiedEvent">
+            <div>
               <mat-form-field appearance="fill">
                 <mat-label>Buy date</mat-label>
                 <input matInput [matDatepicker]="buyDateDatepicker" [(ngModel)]="item.plantDiedEvent.date" required>
@@ -90,8 +98,8 @@
                 <textarea matInput [(ngModel)]="item.plantDiedEvent.description"></textarea>
               </mat-form-field>
             </div>
-            <div class="col-xs">
-              <img *ngIf="item.plantDiedEvent.image" [src]="getImageSrc(item.plantDiedEvent.image)" alt="species picture"/>
+            <div>
+              <img *ngIf="item.plantDiedEvent.image" [src]="getImageSrc(item.plantDiedEvent.image)" alt="species picture" class="img-fluid">
               <span *ngIf="!isCreate">
                 <mat-label class="btn btn-default">
                   <input type="file" (change)="selectFile('plantdiedevent', $event)">
@@ -105,6 +113,9 @@
           </div>
         </div>
 
+      </div>
+      <div class="sidebar col-lg-4">
+        sidebar
       </div>
     </div>
   </div>
