--- a/src/app/entities/plants/list/plants-list.component.html
+++ b/src/app/entities/plants/list/plants-list.component.html
@@ -1,6 +1,7 @@
-<div class="row">
-  <div class="col-xs-offset-1 col-xs-10">
-    <div class="box-row">
+<div class="container">
+<div class="row justify-content-md-center">
+  <div class="col-lg-8 g-0">
+    <div>
       <mat-toolbar>
         <h1>Plants</h1>
         <span class="toolbar-spacer"></span>
@@ -13,7 +14,7 @@
         </mat-form-field>
       </mat-toolbar>
 
-      <div class="mat-elevation-z8">
+      <div class="">
         <table mat-table [dataSource]="dataSource" matSort>
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="pm-action-cell"> Actions</th>
@@ -58,4 +59,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
