--- a/src/app/entities/plantspecies-type/detail/plantspecies-type-detail.component.html
+++ b/src/app/entities/plantspecies-type/detail/plantspecies-type-detail.component.html
@@ -1,14 +1,20 @@
-<div class="row">
-  <div class="col-xs-offset-1 col-xs-10">
-    <div class="box-row">
-      <mat-toolbar>
+<div class="row justify-content-md-center">
+  <div class="col-lg-8">
+    <div class="row">
+      <mat-toolbar class="col-12">
         <h1>Plant specy type</h1>
         <span class="toolbar-spacer"></span>
-        <button mat-icon-button class="btn" routerLink="/entities/plantspeciestypes"><mat-icon>arrow_back</mat-icon></button>
-        <button mat-icon-button class="btn btn-primary" (click)="save()"><mat-icon>save</mat-icon></button>
+        <button mat-icon-button class="btn" routerLink="/entities/plantspeciestypes">
+          <mat-icon>arrow_back</mat-icon>
+        </button>
+        <button mat-icon-button class="btn btn-primary" (click)="save()">
+          <mat-icon>save</mat-icon>
+        </button>
       </mat-toolbar>
+    </div>
 
-      <div *ngIf="item" class="pm-detail-form-container">
+    <div *ngIf="item" class="pm-detail-form-container row">
+      <div class="col-lg-8 g-0">
         <mat-form-field appearance="fill">
           <mat-label>Id</mat-label>
           <input matInput disabled [(ngModel)]="item.id">
@@ -17,8 +23,8 @@
           <mat-label>Name</mat-label>
           <input matInput [(ngModel)]="item.name">
         </mat-form-field>
-
       </div>
+      <div class="col-lg-4 g-0"></div>
     </div>
   </div>
 </div>
