--- a/src/app/entities/plantspecies-type/list/plantspecies-type-list.component.html
+++ b/src/app/entities/plantspecies-type/list/plantspecies-type-list.component.html
@@ -1,6 +1,6 @@
-<div class="row">
-  <div class="col-xs-offset-1 col-xs-10">
-    <div class="box-row">
+<div class="row justify-content-md-center">
+  <div class="col-lg-8">
+    <div>
       <mat-toolbar>
         <h1>Plant species types</h1>
         <span class="toolbar-spacer"></span>
