--- a/src/app/entities/produce-pick-event/detail/produce-pick-event-detail.component.html
+++ b/src/app/entities/produce-pick-event/detail/produce-pick-event-detail.component.html
@@ -1,58 +1,64 @@
-<div class="row">
-  <div class="col-xs-offset-1 col-xs-10">
-    <div class="box-row">
-      <mat-toolbar>
+<div class="row justify-content-md-center">
+  <div class="col-lg-8">
+    <div class="row">
+      <mat-toolbar class="col-12">
         <h1>Produce</h1>
         <span class="toolbar-spacer"></span>
-        <button mat-icon-button class="btn" routerLink="/entities/producepickevents"><mat-icon>arrow_back</mat-icon></button>
-        <button mat-icon-button class="btn btn-primary" (click)="save()"><mat-icon>save</mat-icon></button>
+        <button mat-icon-button class="btn" routerLink="/entities/producepickevents">
+          <mat-icon>arrow_back</mat-icon>
+        </button>
+        <button mat-icon-button class="btn btn-primary" (click)="save()">
+          <mat-icon>save</mat-icon>
+        </button>
       </mat-toolbar>
+    </div>
+    <div *ngIf="item" class="pm-detail-form-container row">
+      <div class="col-lg-8 g-0">
+        <mat-form-field appearance="fill">
+          <mat-label>Id</mat-label>
+          <input matInput disabled [(ngModel)]="item.id">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Plant</mat-label>
+          <mat-select [(ngModel)]="item.plant" [compareWith]="compareById">
+            <mat-option *ngFor="let plant of allPlants" [value]="plant">{{plant.id}} - {{plant.plantSpecies.name}}
+              - {{plant.location.name}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Pick date</mat-label>
+          <input matInput [matDatepicker]="pickDateDatepicker" [(ngModel)]="item.date" required>
+          <mat-datepicker-toggle matSuffix [for]="pickDateDatepicker"></mat-datepicker-toggle>
+          <mat-datepicker #pickDateDatepicker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Description</mat-label>
+          <textarea matInput [(ngModel)]="item.description"></textarea>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Count</mat-label>
+          <input matInput [(ngModel)]="item.count">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Weight (kg)</mat-label>
+          <input matInput [(ngModel)]="item.weight">
+        </mat-form-field>
+      </div>
+      <div class="col-lg-4 g-0">
+        <img *ngIf="item.image" [src]="getImageSrc(item.image)" alt="produce picture" class="img-fluid">
 
-      <div *ngIf="item" class="pm-detail-form-container">
-        <div class="row">
-          <div class="col-xs">
-            <mat-form-field appearance="fill">
-              <mat-label>Id</mat-label>
-              <input matInput disabled [(ngModel)]="item.id">
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-              <mat-label>Plant</mat-label>
-              <mat-select [(ngModel)]="item.plant" [compareWith]="compareById">
-                <mat-option *ngFor="let plant of allPlants" [value]="plant">{{plant.id}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-              <mat-label>Pick date</mat-label>
-              <input matInput [matDatepicker]="pickDateDatepicker" [(ngModel)]="item.date" required>
-              <mat-datepicker-toggle matSuffix [for]="pickDateDatepicker"></mat-datepicker-toggle>
-              <mat-datepicker #pickDateDatepicker></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-              <mat-label>Description</mat-label>
-              <textarea matInput [(ngModel)]="item.description"></textarea>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-              <mat-label>Count</mat-label>
-              <input matInput [(ngModel)]="item.count">
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-              <mat-label>Weight (kg)</mat-label>
-              <input matInput [(ngModel)]="item.weight">
-            </mat-form-field>
-          </div>
-          <div class="col-xs">
-            <img *ngIf="item.image" [src]="getImageSrc(item.image)" alt="species picture"/>
-            <span *ngIf="!isCreate">
-                <mat-label class="btn btn-default">
-                  <input type="file" (change)="selectFile('image', $event)">
-                </mat-label>
-
-                <button mat-raised-button color="primary" [disabled]="!selectedFiles" (click)="upload('image')">
-                  <mat-icon>file_upload</mat-icon><span>Upload</span>
-                </button>
-              </span>
+        <div class="row" *ngIf="!isCreate">
+          <mat-label>Image</mat-label>
+          <mat-label class="btn btn-default col-8">
+            <input type="file" (change)="selectFile('image', $event)">
+          </mat-label>
+          <div class="col-4">
+            <button mat-raised-button color="primary" [disabled]="!selectedFiles" (click)="upload('image')">
+              <mat-icon>file_upload</mat-icon><span>upload</span>
+            </button>
           </div>
         </div>
+
       </div>
     </div>
   </div>
