--- a/src/app/entities/seed-package/detail/seed-package-detail.component.html
+++ b/src/app/entities/seed-package/detail/seed-package-detail.component.html
@@ -1,13 +1,17 @@
-<div class="row">
-  <div class="col-xs-offset-1 col-xs-10">
-    <div class="box-row">
-      <mat-toolbar>
+<div class="row justify-content-md-center">
+  <div class="col-lg-8">
+    <div class="row">
+      <mat-toolbar class="col-12">
         <h1>Seedpackage</h1>
         <span class="toolbar-spacer"></span>
-        <button mat-icon-button class="btn" routerLink="/entities/seedpackages"><mat-icon>arrow_back</mat-icon></button>
-        <button mat-icon-button class="btn btn-primary" (click)="save()"><mat-icon>save</mat-icon></button>
+        <button mat-icon-button class="btn" title="Back to list" routerLink="/entities/seedpackages"><mat-icon>arrow_back</mat-icon></button>
+        <button *ngIf="item" mat-icon-button class="btn" title="Start a plant from this seed" [routerLink]="['/entities/plants/new',{seedpackage:item.id}]"><mat-icon>play_arrow</mat-icon></button>
+        <button mat-icon-button class="btn btn-primary" title="save" (click)="save()"><mat-icon>save</mat-icon></button>
       </mat-toolbar>
-      <div *ngIf="item" class="pm-detail-form-container">
+    </div>
+
+    <div *ngIf="item" class="pm-detail-form-container row">
+      <div class="col-lg-8 g-0">
         <mat-form-field appearance="fill">
           <mat-label>Id</mat-label>
           <input matInput disabled [(ngModel)]="item.id">
@@ -33,7 +37,7 @@
           </mat-select>
         </mat-form-field>
 
-        <mat-checkbox class="example-margin" [(ngModel)]="hasBuyEvent" (change)="onBuyChangeEvent($event)">Purchased</mat-checkbox>
+        <mat-checkbox [(ngModel)]="hasBuyEvent" (change)="onBuyChangeEvent($event)">Purchased</mat-checkbox>
         <div *ngIf="item.buyEvent">
 
           <mat-form-field appearance="fill">
@@ -58,6 +62,8 @@
           </mat-form-field>
         </div>
 
+      </div>
+      <div class="col-lg-4 g-0">
       </div>
     </div>
   </div>
