--- a/src/app/seed-package-block/seed-package-block.component.html
+++ b/src/app/seed-package-block/seed-package-block.component.html
@@ -7,16 +7,16 @@
     </button>
   </mat-toolbar>
   <div *ngIf="isDataPresent">
-    <mat-list *ngFor="let entry of getItemsByTypeMap() | keyvalue">
+    <mat-nav-list *ngFor="let entry of getItemsByTypeMap() | keyvalue">
       <h2 matSubheader>{{entry.key.name}}</h2>
-      <mat-list-item *ngFor="let item of entry.value" routerLink="/entities/seedpackages/{{item.id}}" class="link">
+      <mat-list-item *ngFor="let item of entry.value" routerLink="/entities/seedpackages/{{item.id}}">
         <mat-icon mat-list-icon>article</mat-icon>
         <div mat-line>{{item.description}}</div>
         <div mat-line> {{item.plantSpecies.name}}
           <mat-progress-bar mode="determinate" value="{{item.percentFull}}"></mat-progress-bar>
         </div>
       </mat-list-item>
-    </mat-list>
+    </mat-nav-list>
   </div>
 
 </mat-card>
