--- a/src/app/entities/plant-location/list/plant-location-list.component.html
+++ b/src/app/entities/plant-location/list/plant-location-list.component.html
@@ -13,7 +13,7 @@
         </mat-form-field>
       </mat-toolbar>
 
-      <div class="mat-elevation-z8">
+      <div>
         <table mat-table [dataSource]="dataSource" matSort aria-label="table with plantlocations">
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="pm-action-cell" scope="col"> Actions</th>
