--- a/src/app/entities/seed-package/list/seed-package-list.component.html
+++ b/src/app/entities/seed-package/list/seed-package-list.component.html
@@ -13,7 +13,7 @@
         </mat-form-field>
       </mat-toolbar>
 
-      <div class="mat-elevation-z8">
+      <div>
         <table mat-table [dataSource]="dataSource" matSort>
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="pm-action-cell"> Actions</th>
