--- a/src/app/plant-block/plant-block.component.html
+++ b/src/app/plant-block/plant-block.component.html
@@ -10,7 +10,8 @@
     <mat-list-item *ngFor="let item of items" routerLink="/entities/plants/{{item.id}}">
       <mat-icon mat-list-icon>yard</mat-icon>
       <div mat-line>{{item.plantSpecies.name}}</div>
-      <div mat-line> {{item.location.name}} </div>
+      <div mat-line *ngIf="item.relocationEvents.length"> {{item.relocationEvents[0].location.name}} </div>
+      <div mat-line *ngIf="!item.relocationEvents.length">Location not set</div>
     </mat-list-item>
   </mat-nav-list>
 </mat-card>
