--- a/src/app/entities/produce-pick-event/detail/produce-pick-event-detail.component.html
+++ b/src/app/entities/produce-pick-event/detail/produce-pick-event-detail.component.html
@@ -20,9 +20,8 @@
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Plant</mat-label>
-          <mat-select [(ngModel)]="item.plant" [compareWith]="compareById">
-            <mat-option *ngFor="let plant of allPlants" [value]="plant">{{plant.id}} - {{plant.plantSpecies.name}}
-              - <span *ngIf="plant.relocationEvents.length"> {{plant.relocationEvents[0].location.name}} </span>
+          <mat-select [(ngModel)]="item.plantId" required>
+            <mat-option *ngFor="let plant of allPlants" [value]="plant.id">{{getPlantName(plant)}}
               <span *ngIf="!plant.relocationEvents.length">Location not set</span>
             </mat-option>
           </mat-select>
