--- a/src/app/entities/plants/list/plants-list.component.html
+++ b/src/app/entities/plants/list/plants-list.component.html
@@ -30,19 +30,19 @@
           <!-- ID column -->
           <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
-            <td mat-cell *matCellDef="let item">{{item.id}}</td>
+            <td mat-cell *matCellDef="let item"><a routerLink="/entities/plants/{{item.id}}">{{item.id}}</a></td>
           </ng-container>
           <!-- Plant species column -->
-          <ng-container matColumnDef="plantSpecies">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Plant species</th>
+          <ng-container matColumnDef="species">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Species</th>
             <td mat-cell *matCellDef="let item">
-              <a routerLink="/entities/plantspecies/{{item.plantSpecies?.id}}">{{item.plantSpecies?.name}}</a></td>
+              <a routerLink="/entities/plantspecies/{{item.species?.id}}">{{item.species?.name}}</a></td>
           </ng-container>
           <!-- Plant location column -->
           <ng-container matColumnDef="plantLocation">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Plant location</th>
             <td mat-cell *matCellDef="let item">
-              <a *ngIf="hasCurrentLocation(item)" routerLink="/entities/plantlocations/{{getCurrentLocation(item)?.id}}">{{getCurrentLocation(item)?.name}}</a></td>
+              <a *ngIf="item.currentLocation" routerLink="/entities/plantlocations/{{item.currentLocation?.id}}">{{item.currentLocation?.name}}</a></td>
           </ng-container>
           <ng-container matColumnDef="source">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Source</th>
